force-app/main/default/objects/Lead/fields/AEM_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>AEM_Unique_ID__c</fullName>
    <description>Create Text field on the lead Object called:
AEM Unique ID-  AEM_Unique_ID__c text(50)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AEM Unique ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>