force-app/main/default/objects/Lead/listViews/All_Opened_and_unassigned_leads.listView-meta.xml
<ListView>
    <fullName>All_Opened_and_unassigned_leads</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>School_Acronym__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>CVENT</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>CE Leads Tasks</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Reinquired</value>
    </filters>
    <label>All Opened and Unassigned Leads</label>
</ListView>