force-app/main/default/objects/Lead/listViews/CA_Default_Lead_Owner_Lead.listView-meta.xml
<ListView>
    <fullName>CA_Default_Lead_Owner_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>CA Default Lead Owner</label>
    <queue>CA_Default_Lead_Owner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>