force-app/main/default/objects/Lead/listViews/Jellyfish_Leads_5_29_2020.listView-meta.xml
<ListView>
    <fullName>Jellyfish_Leads_5_29_2020</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Eligible_for_Call_DateTime__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Eligible_for_Call_DateTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/29/2020 1:24 PM</value>
    </filters>
    <filters>
        <field>Lead_Eligible_for_Call_DateTime__c</field>
        <operation>lessOrEqual</operation>
        <value>5/29/2020 1:58 PM</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Reinquired</value>
    </filters>
    <label>Jellyfish Leads 5/29/2020</label>
</ListView>