force-app/main/default/objects/Lead/listViews/Priority_Leads.listView-meta.xml
<ListView>
    <fullName>Priority_Leads</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Eligible_for_Call_DateTime__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Reinquired</value>
    </filters>
    <filters>
        <field>Lead_Eligible_for_Call_DateTime__c</field>
        <operation>lessThan</operation>
        <value>5/29/2020 1:24 PM</value>
    </filters>
    <filters>
        <field>Lead_Eligible_for_Call_DateTime__c</field>
        <operation>greaterThan</operation>
        <value>5/29/2020 1:59 PM</value>
    </filters>
    <label>Priority Leads</label>
</ListView>